[gd_scene load_steps=19 format=3 uid="uid://c4qtyo5efq080"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_iol6c"]
[ext_resource type="Texture2D" uid="uid://bvjwgxgs8d1tt" path="res://assets/player.png" id="1_pq1xu"]
[ext_resource type="PackedScene" uid="uid://cecnnj1ss7quh" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_2jhxt"]
[ext_resource type="PackedScene" uid="uid://4t5hr05abon7" path="res://scenes/components/velocity_component.tscn" id="2_cv3bi"]
[ext_resource type="PackedScene" uid="uid://d2nmrbfr4hh6e" path="res://scenes/components/health_component.tscn" id="2_vh0sw"]
[ext_resource type="PackedScene" uid="uid://mbq6npq78aqi" path="res://scenes/components/random_stream_player_component.tscn" id="4_43u7r"]
[ext_resource type="AudioStream" uid="uid://10ewf4qkwqfg" path="res://assets/audio/impactMining_000.ogg" id="5_f8v4i"]
[ext_resource type="AudioStream" uid="uid://dkow6cgqtsj8d" path="res://assets/audio/impactMining_001.ogg" id="6_ajtyl"]
[ext_resource type="AudioStream" uid="uid://p5fgg3077jcs" path="res://assets/audio/impactMining_002.ogg" id="7_d1l2r"]
[ext_resource type="AudioStream" uid="uid://by1hjjcqe655v" path="res://assets/audio/impactMining_003.ogg" id="8_1b3i4"]
[ext_resource type="AudioStream" uid="uid://718afxjwlap2" path="res://assets/audio/impactMining_004.ogg" id="9_kbh3m"]

[sub_resource type="Animation" id="Animation_7lm5b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_e3yp0"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(-9.91383e-16, -3), Vector2(1.81447e-08, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.279885, 0.377889, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 2.63902, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.4), Vector2(1.7, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dieyx"]
_data = {
"RESET": SubResource("Animation_7lm5b"),
"walk": SubResource("Animation_e3yp0")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu3ff"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_iyjau"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0yx0f"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5067j"]
radius = 6.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_iol6c")

[node name="VelocityComponent" parent="." instance=ExtResource("2_cv3bi")]
max_speed = 90
acceleration = 25.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dieyx")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_vh0sw")]

[node name="RandomStreamPlayerComponent" parent="." instance=ExtResource("4_43u7r")]
streams = Array[AudioStream]([ExtResource("5_f8v4i"), ExtResource("6_ajtyl"), ExtResource("7_d1l2r"), ExtResource("8_1b3i4"), ExtResource("9_kbh3m")])

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_2jhxt")]

[node name="DamageInterval" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -22.0
offset_right = 16.0
offset_bottom = -16.0
pivot_offset = Vector2(16, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_fu3ff")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickUpArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea2D"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_iyjau")

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_0yx0f")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_pq1xu")
offset = Vector2(2.08165e-12, -8.11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_5067j")

[connection signal="timeout" from="DamageInterval" to="." method="_on_damage_interval_timeout"]
[connection signal="body_entered" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_entered"]
[connection signal="body_exited" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_exited"]
